Intergrated angular with spring backend to register user